add element value and normalization and fix all errors